--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Protobufs definitions and generated TypeScript types",
   "scripts": {
-    "generate": "protoc --plugin=protoc-gen-ts_proto=../node_modules/.bin/protoc-gen-ts_proto -I ./proto ./proto/*.proto --ts_proto_out=./gen --ts_proto_opt=nestJs=true,package=omit"
+    "generate": "protoc --plugin=protoc-gen-ts_proto=$(yarn bin protoc-gen-ts_proto) -I ./proto ./proto/*.proto --ts_proto_out=./gen --ts_proto_opt=nestJs=true,package=omit"
   },
   "files": [
     "proto",
