Update package name to @tapir1919/contracts

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tapir/contracts",
+  "name": "@tapir1919/contracts",
   "version": "1.0.0",
   "description": "Protobufs definitions and generated TypeScript types",
   "scripts": {
