--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@tapir19/contracts",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Protobufs definitions and generated TypeScript types",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc -p tsconfig.build.json",
     "generate": "protoc --plugin=protoc-gen-ts_proto=$(yarn bin protoc-gen-ts_proto) -I ./proto ./proto/*.proto --ts_proto_out=./gen --ts_proto_opt=nestJs=true,package=omit"
   },
   "files": [
@@ -16,5 +19,9 @@
     "@nestjs/microservices": "^11.1.13",
     "rxjs": "^7.8.2",
     "ts-proto": "^2.11.2"
+  },
+  "devDependencies": {
+    "@types/node": "^25.2.3",
+    "typescript": "^5.9.3"
   }
 }
