--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tapir19/contracts",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Protobufs definitions and generated TypeScript types",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,6 +9,7 @@
     "generate": "protoc --plugin=protoc-gen-ts_proto=$(yarn bin protoc-gen-ts_proto) -I ./proto ./proto/*.proto --ts_proto_out=./gen --ts_proto_opt=nestJs=true,package=omit"
   },
   "files": [
+    "dist",
     "proto",
     "gen"
   ],
